unpackaged/main/default/objects/Quote/fields/Account_Name_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Email_Template__c</fullName>
    <description>This is used in Quote Amendment email template</description>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name - Email Template</label>
    <type>Text</type>
</CustomField>