unpackaged/main/default/objects/Quote/fields/Account_PowerPass_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_PowerPass_Number__c</fullName>
    <formula>Opportunity.Account.Power_Pass_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PowerPass Number</label>
    <type>Text</type>
</CustomField>