unpackaged/main/default/objects/Quote/fields/Assigned_Store__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Store the Quote is assigned to in COS</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Assigned Quotes</relationshipLabel>
    <relationshipName>Assigned_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>