unpackaged/main/default/objects/Quote/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER_CANCELLED</fullName>
                <label>Customer Cancelled</label>
            </value>
            <value>
                <fullName>ORDER_ENTRY_ERROR</fullName>
                <label>Order Entry Error</label>
            </value>
            <value>
                <fullName>PRICING</fullName>
                <label>Pricing</label>
            </value>
            <value>
                <fullName>Pricing Only Quote</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>COMPETITOR_OFFER</fullName>
                <label>Competitor offer</label>
            </value>
            <value>
                <fullName>CREDIT_REJECTED</fullName>
                <label>Credit Rejected</label>
            </value>
            <value>
                <fullName>ITEM_NOT_AVAILABLE</fullName>
                <label>Item not available</label>
            </value>
            <value>
                <fullName>KITCHEN_REFUND</fullName>
                <label>Kitchen In-Home Refund</label>
            </value>
            <value>
                <fullName>LEAD_TIME</fullName>
                <label>Lead time</label>
            </value>
            <value>
                <fullName>NO_LONGER_REQUIRED</fullName>
                <label>No longer required</label>
            </value>
            <value>
                <fullName>ORDER_ERROR</fullName>
                <label>Order error</label>
            </value>
            <value>
                <fullName>OUT_OF_STOCK</fullName>
                <label>Out of stock</label>
            </value>
            <value>
                <fullName>PROCESSING_ERROR</fullName>
                <label>Processing Error</label>
            </value>
            <value>
                <fullName>RANGE</fullName>
                <label>Range</label>
            </value>
            <value>
                <fullName>SYSTEM_CANCELLATION</fullName>
                <label>System Cancellation</label>
            </value>
            <value>
                <fullName>WITHDRAWN_BY_CUSTOMER</fullName>
                <label>Credit Request withdrawn by Customer</label>
            </value>
            <value>
                <fullName>SUBMITTED_TOO_LATE</fullName>
                <label>Order Submitted Too Late</label>
            </value>
            <value>
                <fullName>FRAUD_ORDER</fullName>
                <label>Processing Failure</label>
            </value>
            <value>
                <fullName>INVENTORY_INACCURACY</fullName>
                <label>Inventory Inaccuracy</label>
            </value>
            <value>
                <fullName>LOSS_PREVENTION_REQUESTED</fullName>
                <label>Loss Prevention Requested</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_SUPP_INSR_DIR_AVAL</fullName>
                <label>Closed Lost - Supplier Direct/In Store Delivery Availability</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_STOCK_AVAIL</fullName>
                <label>Closed Lost - Stock Availability/ Supplier ETA</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_PRIC_TENDER</fullName>
                <label>Closed Lost - Pricing for Tender</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_PRICING</fullName>
                <label>Closed Lost - Pricing</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_QUOTE_TURNAROUND</fullName>
                <label>Closed Lost - Quote Turnaround Time</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_PUR_NETWORK</fullName>
                <label>Closed Lost - Purchased in Network</label>
            </value>
            <value>
                <fullName>CLOSED_LOST_BUNN_DELV_AVAIL</fullName>
                <label>Closed Lost - Bunnings Delivery Availability</label>
            </value>
            <value>
                <fullName>CLOSED_EXPIRED_OVER_30_DAYS</fullName>
                <label>Closed-Quote Expired Over 30 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>