unpackaged/main/default/objects/Quote/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Name of contact as on COS and is not expected to be a contact associated to the customer accounts in CRM</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>