unpackaged/main/default/objects/Quote/fields/COS_ID__c.field-meta.xml
<CustomField>
    <fullName>COS_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>COS ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>