unpackaged/main/default/objects/Quote/fields/COS_Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>COS_Quote_Link__c</fullName>
    <formula>IF(
    Owned_by_restricted_team__c = &#39;Insurance&#39;,
    IF ( $Profile.Name = &#39;NZ Sales Support - Insurance&#39; || 
        $Profile.Name = &#39;Sales Person BDM - Insurance&#39; || 
        $Profile.Name = &#39;Support - BDM Insurance&#39;,
        HYPERLINK($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.COS_Existing_Quote_URL__c &amp; COS_ID__c ,&quot;Click to view COS Quote&quot;),
        &#39;-&#39;
    ),
    HYPERLINK($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.COS_Existing_Quote_URL__c &amp; COS_ID__c ,&quot;Click to view COS Quote&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COS Quote Link</label>
    <type>Text</type>
</CustomField>