unpackaged/main/default/objects/Quote/fields/COS_Quote_Link_Name__c.field-meta.xml
<CustomField>
    <fullName>COS_Quote_Link_Name__c</fullName>
    <description>Used in COS quote cancellation flow to have quote name be the anchor text for the link to COS</description>
    <formula>HYPERLINK($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.COS_Existing_Quote_URL__c
&amp;COS_ID__c ,
 Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COS Quote Link Name</label>
    <type>Text</type>
</CustomField>