unpackaged/main/default/objects/Quote/fields/Created_by_TM_number__c.field-meta.xml
<CustomField>
    <fullName>Created_by_TM_number__c</fullName>
    <label>Created by TM number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>