unpackaged/main/default/objects/Quote/fields/Current_User_is_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Opp_Owner__c</fullName>
    <description>Temporary Formula used in List view filtering. Update when the &quot;Enable quotes without parent opportunities&quot; feature reaches General Availability and Quote Owner values can be correctly assigned.</description>
    <formula>$User.Id = Opportunity.Owner.Id</formula>
    <label>Current User is Opp Owner</label>
    <type>Checkbox</type>
</CustomField>