unpackaged/main/default/objects/Quote/fields/Delivery_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Collection_Date__c</fullName>
    <description>Date when it is due to be collected</description>
    <label>Delivery/Collection Date</label>
    <type>Date</type>
</CustomField>