unpackaged/main/default/objects/Quote/fields/Total_GP__c.field-meta.xml
<CustomField>
    <fullName>Total_GP__c</fullName>
    <description>Total Gross Profit of this quote</description>
    <formula>(Total_Value_excl_GST__c - Total_Cost_excl_GST__c) / Total_Value_excl_GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>