unpackaged/main/default/objects/Quote/fields/Total_Value_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_excl_GST__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Amount minus the Goods and Services Tax</description>
    <label>Total Value (excl. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>