unpackaged/main/default/objects/Quote/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Quote</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>