unpackaged/main/default/objects/Quote/fields/Type_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Delivery__c</fullName>
    <label>Type of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PickedbyCustomer</fullName>
                <label>Picked by Customer</label>
            </value>
            <value>
                <fullName>CustomertoCollect</fullName>
                <label>Customer to Collect</label>
            </value>
            <value>
                <fullName>DeliverytoCustomer</fullName>
                <label>Delivery to Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>