unpackaged/main/default/objects/Quote/fields/Updated_by_TM_name__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_TM_name__c</fullName>
    <label>Updated by TM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>