unpackaged/main/default/objects/Quote/recordTypes/COS_Quote.recordType-meta.xml
<RecordType>
    <fullName>COS_Quote</fullName>
    <active>true</active>
    <description>Quotes created in COS</description>
    <label>COS Quote</label>
</RecordType>