unpackaged/main/default/objects/Quote/validationRules/Cannot_Select_InactiveTerminated_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Select_InactiveTerminated_Account</fullName>
    <active>true</active>
    <description>Ensures an Inactive/Terminated Account cannot be associated to the Quote</description>
    <errorConditionFormula>AND(
NOT( Opportunity.Account.RecordType.Name = &quot;Person Account&quot;),
!ISNULL(  Opportunity.AccountId  ),
OR(
ISNEW(),
ISCHANGED(  OpportunityId )),
OR(
ISPICKVAL( Opportunity.Account.Account_Status__c ,&quot;Inactive&quot;),
ISPICKVAL(Opportunity.Account.Account_Status__c , &quot;Terminated&quot;)
),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>You cannot relate an Inactive or Terminated Account</errorMessage>
</ValidationRule>