unpackaged/main/default/objects/Quote/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedBy</field>
        <operation>equals</operation>
        <value>integration user 2</value>
    </filters>
    <label>Admin</label>
    <sharedTo>
        <group>System_Administrator</group>
    </sharedTo>
</ListView>