unpackaged/main/default/objects/Quote/listViews/My_Open_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Open_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Total_Value_excl_GST__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_Opp_Owner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Enquiry,Quote</value>
    </filters>
    <label>My Open Quotes</label>
</ListView>